--- a/app/src/main/res/layout/files_grid_view.xml
+++ b/app/src/main/res/layout/files_grid_view.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_green_dark">
+    android:background="@android:color/black">
 
     <GridView
         android:id="@+id/file_grid"
@@ -13,6 +13,7 @@
         android:numColumns="auto_fit"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
+        android:background="@drawable/border"
         android:gravity="center"
         />
 
